argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: semogong
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: web
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 43200
  type: LoadBalancer
