argo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: semogong-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: semogong.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: semogong
            port:
              number: 80
